--- a/1.html
+++ b/1.html
@@ -27,10 +27,10 @@
 <div class="sticky"><a href="index.html">a station further on</a></div>
 
 <div class="puzzle">
-  <p>I was going to the village of Ashgrove, but took a ticket for a station further on. The train would leave in a few minutes, at eight-fifty. I hurried, for the next would not go until half past nine. There was almost no one on the platform. I walked through the carriages. I remember some farmers, a woman dressed in mourning, a youth deep in Tacitus' Annals and a wounded, happy soldier.</br>
+  <p>I was going to the village of <a class="text" href=https://www.google.com/maps/search/suburbs+of+Fenton,+Staffordshire,+Britain/@52.9973179,-2.1773594,14z/data=!3m1!4b1>Ashgrove</a>, but I decided to <code class="popup" onclick="myFunction()">take a ticket for<span class="popuptext" id="myPopup"> a station further on. The train would leave in a few minutes, at eight-fifty. I hurried, for the next would not go until half past nine. There was almost no one on the platform. I walked through the carriages. I remember some farmers, a woman dressed in mourning, a youth deep in Tacitus' Annals and a wounded, happy soldier.</br>
 </br>
 
-  A man I recognized ran furiously, but vainly, the length of the platform. It was Captain Richard Madden. Shattered, trembling, I huddled in the distant corner of the seat, as far as possible from the fearful window.</br>
+  A man I recognized ran furiously,Forking Path2</span></code> but vainly, the length of the platform. It was Captain Richard Madden. Shattered, trembling, I huddled in the distant corner of the seat, as far as possible from the fearful window.</br>
 </br>
 
   rom utter terror I passed into a state of almost abject happiness. I told myself that the duel had already started and that I had won the first encounter by besting my adversary in his first attack - even if it was only for forty minutes - by an accident of fate. I argued that so small a victory prefigured a total victory. I argued that it was not so trivial, that were it not for the precious accident of the train schedule, I would be in prison or dead. I argued, with no less sophism, that my timorous happiness was proof that I was man enough to bring this adventure to a successful conclusion. From my weakness I drew strength that never left me.</br>
@@ -39,11 +39,16 @@
   I foresee that man will resign himself each day to new abominations, that soon only soldiers and bandits will be left. To them I offer this advice: Whosoever would undertake some atrocious enterprise should act as if it were already accomplished, should impose upon himself a future as irrevocable as the past.</br>
 </br>
 
-  Thus I proceeded, while with the eyes of a man already dead, I contemplated the fluctuations of the day which would probably be my last, and watched the diffuse coming of night.</br>
-</br>
-</p>
+  Thus I proceeded, while with the eyes of a man already dead, I contemplated the fluctuations of the day which would probably be my last, and watched the diffuse coming of night.</p>
 
 </div>
+
+<script>
+function myFunction() {
+  var popup = document.getElementById("myPopup");
+  popup.classList.toggle("show");
+}
+</script>
 
 </body>
 
