--- a/5.html
+++ b/5.html
@@ -30,14 +30,13 @@
     <p>We sat down, I upon a large, low divan, he with his back to the window and to a large circular clock. I calculated that my pursuer, Richard Madden, could not arrive in less than an hour. My irrevocable decision could wait.<br>
   </br>
 
-    "A strange destiny," said Stephen Albert, "that of Ts'ui Pen - Governor of his native province, learned in astronomy, in astrology and tireless in the interpretation of the canonical books, a chess player , a famous poet and a calligrapher . Yet he abandoned all to make a book and a labyrinth. .<br>
+    "A strange destiny," said Stephen Albert, "that of Ts'ui Pen - Governor of his native province, learned in astronomy, in astrology and tireless in the interpretation of the canonical books, a chess player , a famous poet and a calligrapher. Yet he abandoned all to make a book and a labyrinth. .<br>
   </br>
 
-    He gave up all the pleasures of oppression, justice, of a well-stocked bed, of banquets, and even of erudition, and shut himself up in the Pavilion of the Limpid Sun for thirteen years. At his death, his heirs found only a mess of manuscripts. The family, as you doubtless know, wished to consign them to the fire, but the executor of the estate - a Taoist or a Buddhist monk - insisted on their publication."<br>
+    He gave up all the pleasures of oppression, justice, of a well-stocked bed, of banquets, and even of erudition. At his death, his heirs found only a mess of manuscripts. The family, as you doubtless know, wished to consign them to the fire, but the executor of the estate - a Taoist or a Buddhist monk - insisted on their publication."<br>
   </br>
 
-   "Those of the blood of Ts'ui Pen," I replied, "still curse the memory of that monk. Such a publication was madness. The book is a shapeless mass of contradictory rough drafts.<br>
-  </br>
+   "Those of the blood of Ts'ui Pen," I replied, "still curse the memory of that monk. Such a publication was madness. The book is a shapeless mass of contradictory rough drafts.
 
     </p>
   </div>
@@ -52,15 +51,10 @@
       "Here is the Labyrinth," Albert said, pointing to a tall, laquered writing cabinet.<br>
   </br>
    
-      "A symbolic labyrinth," he corrected me. "An invisible labyrinth of time. No one realized that the book and the labyrinth were one and the same.<br>
+      "A symbolic labyrinth," he corrected me. "An invisible labyrinth of time. No one realized that the book and the labyrinth were one and the same.The Pavilion of the Limpid Sun was set in the middle of an intricate garden. This may have suggested the idea of a physical maze."<br>
   </br>
 
-
-       The Pavilion of the Limpid Sun was set in the middle of an intricate garden. This may have suggested the idea of a physical maze."<br>
-  </br>
-
-       The Garden of Forking Paths was the chaotic novel itself. The phrase 'to various future times, but not to all' suggested the image of bifurcating in time, not in space. In all fiction, when a man is faced with alternatives he chooses one at the expense of the others. In the almost unfathomable Ts'ui Pen, he chooses - simultaneously - all of them. He thus creates various futures, various times which start others that will in their turn branch out and bifurcate in other times. .<br>
-  </br>
+       The Garden of Forking Paths was the chaotic novel itself. The phrase 'to various future times, but not to all' suggested the image of bifurcating in time, not in space. In all fiction, when a man is faced with alternatives he chooses one at the expense of the others. In the almost unfathomable Ts'ui Pen, he chooses - simultaneously - all of them. He thus creates various futures, various times which start others that will in their turn branch out and bifurcate in other times. 
 </p>
 
     </div>
@@ -72,7 +66,7 @@
     <p>"Fang, let us say, has a secret. A stranger knocks at his door. Fang makes up his mind to kill him. Naturally there are various possible outcomes.<br>
   </br>
  
-    Fang can kill the intruder, the intruder can kill Fang, both can be saved,both can die and so on and so on. In Ts'ui Pen's work, all the possible solutions occur, each one being the point of departure for other bifurcations. Sometimes the pathways of this labyrinth converge. For example, you come to this house; but in other possible pasts you are my enemy; in others my friend. </br>
+    <code class="popup" onclick="myFunction()">Fang can kill the intruder, the intruder can kill Fang, both can be saved,both can die and so on and so on. In Ts'ui Pen's work, all the possible solutions occur, each one being the point of departure for other bifurcations.<span class="popuptext" id="myPopup">Symbolic Forking Paths & the Answer</span></code> Sometimes the pathways of this labyrinth converge. For example, you come to this house; but in other possible pasts you are my enemy; in others my friend. </br>
  </br>
 
      "If you will put up with my atrocious pronunciation, I would like to read you a few pages of your ancestor's work."  </br>
@@ -81,8 +75,7 @@
      His countenance, in the bright circle of lamplight, was certainly that of an ancient, but it shone with something unyielding, even immortal.<br>
   </br>
 
-      The Garden of Forking Paths is an enormous guessing game, or parable, in which the subject is time. The rules of the game forbid the use of the word itself. <br>
-  </br>
+      <code class="popup" onclick="myFunction()">The Garden of Forking Paths is an enormous guessing game, or parable, in which the subject is time.<span class="popuptext" id="myPopup">The Answer</span></code> The rules of the game forbid the use of the word itself. 
 
     </p>
   </div>
@@ -97,14 +90,97 @@
        The Garden of Forking Paths is a picture, incomplete yet not false, of the universe such as Ts'ui Pen conceived it to be. Differing from Newton and Schopenhauer, your ancestor did not think of time as absolute and uniform. He believed in an infinite series of times, in a dizzily growing, ever spreading network of diverging, converging and parallel times. This web of time - the strands of which approach one another, bifurcate, intersect or ignore each other through the centuries - embraces every possibility. We do not exist in most of them. </br>
  </br>
 
-      In some you exist and not I, while in others I do, and you do not, and in yet others both of us exist. In this one, in which chance has favored me, you have come to my gate. In another, you, crossing the garden, have found me dead. In yet another, I say these very same words, but am an error, a phantom." </br>
- </br>
+      In some you exist and not I, while in others I do, and you do not, and in yet others both of us exist. In this one, in which chance has favored me, you have come to my gate. In another, you, crossing the garden, have found me dead." 
+
 
     </div>
   </div>
 </section>
 
 </body>
+
+<style>
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.popup:hover{
+  animation: shake 1s;
+  animation-duration: 0.1s;
+}
+
+
+.popup .popuptext {
+  visibility: hidden;
+  width: 160px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 2px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -80px;
+}
+
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+
+
+
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;} 
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+</style>
+
+<script>
+function myFunction() {
+  var popup = document.getElementById("myPopup");
+  popup.classList.toggle("show");
+}
+</script>
 
 <script>
   var slideUp = {
