--- a/2.html
+++ b/2.html
@@ -28,7 +28,7 @@
 <div class="sticky"><a href="index.html">"Ashgrove"? and the coin</a></div>
 
 <div class="puzzle">
-  <p>"Ashgrove," they replied. I got out.A lamp lit the platform, but the children's faces remained in a shadow. One of them asked me: "Are you going to Dr. Stephen Albert's house?" Without waiting for my answer, another said: "The house is a good distance away but you won't get lost if you take the road to the left and bear to the left at every crossroad."I threw them a coin (my last), went down some stone steps and started along a deserted road.
+  <p><code class="popup" onclick="myFunction()">They replied: it is <span class="popuptext" id="myPopup">Forking Path3</span></code>! I got out.A lamp lit the platform, but the children's faces remained in a shadow. One of them asked me: "Are you going to Dr. Stephen Albert's house?" Without waiting for my answer, another said: "The house is a good distance away but you won't get lost if you take the road to the left and bear to the left at every crossroad."I threw them a coin (my last), went down some stone steps and started along a deserted road.
 </br>
 
   Under the trees of England I meditated on this lost and perhaps mythical labyrinth. I imagined it untouched and perfect on the secret summit of some mountain; I imagined it drowned under rice paddies or beneath the sea; I imagined it infinite, made not only of eight-sided pavilions and of twisting paths but also of rivers, provinces and kingdoms . . . 
@@ -36,11 +36,90 @@
   Lost in these imaginary illusions I forgot my destiny - that of the hunted. For an undetermined period of time I felt myself cut off from the world, an abstract spectator. The hazy and murmuring countryside, the moon, the decline of the evening, stirred within me. Going down the gently sloping road I could not feel fatigue. The evening was at once intimate and infinite.</br>
 </br>
 
-  The road kept descending and branching off, through meadows misty in the twilight. A high-pitched and almost syllabic music kept coming and going, moving with the breeze, blurred by the leaves and by distance.</br>
-</br>
-</p>
+  The road kept descending and branching off, through meadows misty in the twilight. A high-pitched and almost syllabic music kept coming and going, moving with the breeze, blurred by the leaves and by distance.</p>
 
 </div>
+
+<style>
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.popup:hover{
+  animation: shake 1s;
+  animation-duration: 0.1s;
+}
+
+
+.popup .popuptext {
+  visibility: hidden;
+  width: 160px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 2px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -80px;
+}
+
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;} 
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+</style>
+
+<script>
+function myFunction() {
+  var popup = document.getElementById("myPopup");
+  popup.classList.toggle("show");
+}
+</script>
 
 </body>
 
