--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-
+<i class="Kicker">
 <div class="s1">
 <a href="0.html" >the voice that had spoken in German
 </a>
@@ -36,7 +36,7 @@
 </div>
 
 <div class="s3">
-<a href="2.html" >"Ashgrove"? and the coin
+<a href="2.html" >“Ashgrove?” and the coin
 </a>
 </div>
 
@@ -50,23 +50,17 @@
 </a>
 </div>
 
-<div class="alert">
-  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-  <p>Explore main story line and click → </p>
-</div>
-
-<div id="popLayer">
-</div>
-
 <button id="myBtn"><h3>☯︎</h3></button>
 <div id="myModal" class="modal">
 
 
 <div class="modal-content">
     <span class="close">&times;</span>
-    <p>Finish the main story line and <a href="5.html" >unlock the puzzle</a>
+    <p>Explore the forking paths and <a href="5.html" >Unlock the Labyrinth</a>
 </a></p>
   </div>
+</i>
+
 
 <style>
 .alert {
@@ -75,7 +69,7 @@
   width:15rem;
   height:6rem;
   background-color: #7c7c7c;
-  color: white;
+  color: dimgrey;
   text-align:center;
   position:absolute;
   left:72%;
@@ -84,7 +78,7 @@
 
 .closebtn {
   margin-left: 15px;
-  color: white;
+  color: dimgrey;
   font-weight: bold;
   float: right;
   font-size: 22px;
@@ -94,16 +88,16 @@
 }
 
 .closebtn:hover {
-  color: black;
+  color: white;
 }
 </style>
 
 <style>
-  @media only screen and (max-width: 450px)
+  @media only screen and (max-width: 1200px)
     {
 p{
   font-family: 'Rajdhani', sans-serif;
-  color:white;
+  color:dimgrey;
   text-align:center;
   font-size:1.4rem;
 }
@@ -113,7 +107,149 @@ a{
 }
 
 .modal
+    { 
+        height:100%;
+        width:100%;
+        display: none;
+        position: fixed;
+        z-index: 1;
+        padding-top: 140px;
+        background-color:black;
+    }
+
+.s1{
+  text-align:center;
+  position: absolute;
+  top: 31%;
+  left: 12%;
+  animation-name: float;
+  animation-duration: 3s;
+  margin-top:-200px;
+  margin-bottom:-200px;
+  transition: transform .2s;
+  margin: 0 auto;
+  animation-delay: 0s;
+}
+
+.s2{
+  position: absolute;
+  top: 46%;
+  left: 53%;
+  animation-name: float;
+  animation-duration: 3s;
+  margin-top:-200px;
+  margin-bottom:-200px;
+  transition: transform .2s;
+  margin: 0 auto;
+   animation-delay: 1s;
+}
+
+.s3{
+  position: absolute;
+  top: 59%;
+  left: 12%;
+  animation-name: float;
+  animation-duration: 3s;
+  margin-top:-200px;
+  margin-bottom:-200px;
+  transition: transform .2s;
+  margin: 0 auto;
+   animation-delay: 2s;
+}
+
+.s4{
+  position: absolute;
+  top: 73%;
+  left: 48%;
+  animation-name: float;
+  animation-duration: 3s;
+  margin-top:-200px;
+  margin-bottom:-200px;
+  transition: transform .2s;
+  margin: 0 auto;
+   animation-delay: 3s;
+}
+
+.s5{
+  position: absolute;
+  top: 85%;
+  left: 13%;
+  animation-name: float;
+  animation-duration: 3s;
+  margin-top:-200px;
+  margin-bottom:-200px;
+  transition: transform .2s;
+  margin: 0 auto;
+   animation-delay: 4s;
+}
+
+#myBtn{
+  color:lightgrey;
+  font-size:1.2rem;
+  position: absolute;
+  top: -14.5%;
+  left: 43%;
+  text-align:center;
+  background-color:transparent;
+  border:none;
+}
+
+.alert {
+  margin-top:-10rem;
+  display:block;
+  padding: 20px;
+  width:11rem;
+  height:7rem;
+  background-color: #7c7c7c;
+  color: white;
+  text-align:center;
+  position:absolute;
+  border:solid white 1px;
+  top:0%;
+  left:2%;
+}
+
+@keyframes float {
+  0% {
+    transform: translatey(0px);
+  }
+  25% {
+    transform: translatey(8px);
+  }
+  50% {
+    transform: translatey(0px);
+  }
+  }
+
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
+
+
+
+
+  @media only screen and (max-width: 810px)
     {
+p{
+  font-family: 'Rajdhani', sans-serif;
+  color:dimgrey;
+  text-align:center;
+  font-size:1.4rem;
+}
+
+a{
+  text-decoration:
+}
+
+.modal
+    { 
+        height:100%;
+        width:100%;
         display: none;
         position: fixed;
         z-index: 1;
@@ -190,7 +326,7 @@ a{
   color:lightgrey;
   font-size:2rem;
   position: absolute;
-  top: 5%;
+  top: 1%;
   left: 43%;
   text-align:center;
   background-color:transparent;
